--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ permissions:
   contents: read
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
-    branches: [master]
+    branches: [main]
   schedule:
     # Run weekly (* is a special character in YAML, so quote the string)
     - cron: '0 0 * * 0'
