Change colorx to colortrans.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,6 +55,6 @@ jobs:
 
     - name: Test
       run: |
-        colorx --help
+        colortrans --help
         cd tests  # so package is imported from site-packages instead of working directory
         python -m unittest discover . -v
